<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="database.fragment.DetailsCuveFragment"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/CuveActivity_Details_TextInputEdit_Number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cuve_number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/CuveActivity_Details_TextInputEdit_Volume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cuve_volume"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/CuveActivity_Details_TextInputEdit_Period"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cuve_month"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/CuveActivity_Details_TextInputEdit_Color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cuve_color"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/CuveActivity_Details_TextInputEdit_Variety"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cuve_variety"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <Button
            android:id="@+id/CuveActivity_details_button_Change"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="left"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="40dp"
            android:text="Modifier"
            android:textSize="12dp" />
        <Button
            android:id="@+id/CuveActivity_details_button_Delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:text="Supprimer"
            android:textSize="12dp" />

    </LinearLayout>
</LinearLayout>
