<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.CuveDetails"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/CuveActivity_details_textView_Title"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:textSize="18dp"
        android:textAlignment="center"
        android:text="Details cuve"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/CuveActivity_Details_TextInputEdit_Number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cuve_number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/CuveActivity_Details_TextInputEdit_Volume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cuve_volume"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/CuveActivity_Details_TextInputEdit_Period"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cuve_month"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/CuveActivity_Details_TextInputEdit_Color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cuve_color"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/CuveActivity_Details_TextInputEdit_Variety"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cuve_variety"
                 />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">
    <Button
        android:id="@+id/CuveActivity_details_button_Change"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_gravity="left"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="30dp"
        android:text="Modifier"
        android:textSize="12dp" />
    <Button
        android:id="@+id/CuveActivity_details_button_Delete"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginRight="30dp"
        android:text="Supprimer"
        android:textSize="12dp" />

        <Button
            android:id="@+id/CuveActivity_details_button_Follow"
            android:layout_width="105dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="Nouveau suivi"
            android:textSize="12dp" />
    </LinearLayout>
</LinearLayout>